Switched to Java21, now using virtual threads except for CpuSolver